parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> NUMBER
Rule 2     expression -> FLOAT
Rule 3     expression -> STRING
Rule 4     expression -> IDENTIFIER
Rule 5     expression -> LPAREN expression RPAREN
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression TIMES expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression DIVIDE_CEIL expression
Rule 11    expression -> expression DIVIDE_FLOOR expression
Rule 12    expression -> expression MOD expression
Rule 13    expression -> expression EXP expression
Rule 14    expression -> expression AND expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> expression XOR expression
Rule 17    expression -> expression POWER expression
Rule 18    expression -> NOT expression
Rule 19    expression -> MINUS expression
Rule 20    expression -> PLUS expression
Rule 21    expression -> expression IMAG
Rule 22    comparison -> expression comparison_op expression
Rule 23    comparison -> comparison comparison_op expression
Rule 24    expression -> comparison
Rule 25    comparison_op -> GREATER_THAN
Rule 26    comparison_op -> SMALLER_THAN
Rule 27    comparison_op -> UNEQUALS
Rule 28    comparison_op -> EQUALS
Rule 29    comparison_op -> SMALLER_EQUALS
Rule 30    comparison_op -> GREATER_EQUALS
Rule 31    assign_expression -> IDENTIFIER ASSIGN expression
Rule 32    expression -> assign_expression
Rule 33    expression -> IDENTIFIER PLUS_ASSIGN expression
Rule 34    expression -> IDENTIFIER MINUS_ASSIGN expression
Rule 35    expression -> IDENTIFIER TIMES_ASSIGN expression
Rule 36    expression -> IDENTIFIER POWER_ASSIGN expression
Rule 37    expression -> IDENTIFIER DIVIDE_ASSIGN expression
Rule 38    expression -> IDENTIFIER DIVIDE_FLOOR_ASSIGN expression
Rule 39    expression -> IDENTIFIER DIVIDE_CEIL_ASSIGN expression
Rule 40    expression -> IDENTIFIER GREATER_THAN_ASSIGN expression
Rule 41    expression -> IDENTIFIER SMALLER_THAN_ASSIGN expression
Rule 42    expression -> IDENTIFIER GREATER_EQUALS_ASSIGN expression
Rule 43    expression -> IDENTIFIER SMALLER_EQUALS_ASSIGN expression
Rule 44    expression -> IDENTIFIER EQUALS_ASSIGN expression
Rule 45    expression -> IDENTIFIER UNEQUALS_ASSIGN expression
Rule 46    expression -> IDENTIFIER AND_ASSIGN expression
Rule 47    expression -> IDENTIFIER OR_ASSIGN expression
Rule 48    expression -> IDENTIFIER XOR_ASSIGN expression
Rule 49    expression -> IDENTIFIER EXP_ASSIGN expression
Rule 50    expression -> IDENTIFIER MOD_ASSIGN expression
Rule 51    expression -> BEGIN statements END
Rule 52    expression -> BEGIN statements SEMICOLON END
Rule 53    expression -> BEGIN END
Rule 54    statements -> expression
Rule 55    statements -> statements SEMICOLON expression
Rule 56    expression -> IF expression THEN COMMA expression DOT
Rule 57    expression -> IF expression THEN COMMA expression else_elif_body DOT
Rule 58    else_elif_body -> COMMA ELIF IF expression THEN COMMA expression else_elif_body
Rule 59    else_elif_body -> ELSE expression
Rule 60    else_elif_body -> COMMA ELIF IF expression THEN COMMA expression
Rule 61    expression -> WHILE expression THEN COMMA expression DOT
Rule 62    expression -> LOOP IDENTIFIER IN expression LOOPTHEN expression DOT
Rule 63    expression -> OPEN_BRACKETS expression ITER expression CLOSED_BRACKETS
Rule 64    expression -> CLOSED_BRACKETS expression ITER expression CLOSED_BRACKETS
Rule 65    expression -> OPEN_BRACKETS expression ITER expression OPEN_BRACKETS
Rule 66    expression -> CLOSED_BRACKETS expression ITER expression OPEN_BRACKETS
Rule 67    expression -> LAMBDA parameter LAMBDA_ARROW expression
Rule 68    parameter -> LPAREN parameter_pos RPAREN
Rule 69    parameter -> IDENTIFIER
Rule 70    parameter -> empty
Rule 71    parameter_pos -> parameter_pos_list
Rule 72    parameter_pos_list -> IDENTIFIER COMMA parameter_pos_list
Rule 73    parameter_pos_list -> IDENTIFIER
Rule 74    parameter_pos_list -> parameter_keywords
Rule 75    parameter_keywords -> parameter_kw_list
Rule 76    parameter_kw_list -> IDENTIFIER COLON expression COMMA parameter_kw_list
Rule 77    parameter_kw_list -> IDENTIFIER COLON expression
Rule 78    parameter_kw_list -> parameter_infty
Rule 79    parameter_infty -> IDENTIFIER DOTS
Rule 80    parameter_expr -> parameter_pos_expr
Rule 81    parameter_expr -> empty
Rule 82    parameter_pos_expr -> expression COMMA parameter_pos_expr
Rule 83    parameter_pos_expr -> expression
Rule 84    parameter_pos_expr -> parameter_keywords_expr
Rule 85    parameter_keywords_expr -> expression COLON expression COMMA parameter_keywords_expr
Rule 86    parameter_keywords_expr -> expression COLON expression
Rule 87    empty -> <empty>
Rule 88    expression -> expression LPAREN parameter_expr RPAREN
Rule 89    let_assign -> IDENTIFIER EQUALS expression COMMA let_assign
Rule 90    let_assign -> IDENTIFIER EQUALS expression
Rule 91    expression -> LET let_assign IN expression DOT
Rule 92    param_list -> expression COMMA param_list
Rule 93    param_list -> expression COMMA expression
Rule 94    expression -> expression CONS expression
Rule 95    expression -> LPAREN param_list RPAREN
Rule 96    expression -> expression OPEN_BRACKETS PLUS CLOSED_BRACKETS
Rule 97    expression -> expression OPEN_BRACKETS expression CLOSED_BRACKETS
Rule 98    expression -> NULL
Rule 99    expression -> OPEN_BRACKETS param_list CLOSED_BRACKETS
Rule 100   expression -> OPEN_BRACKETS expression CLOSED_BRACKETS
Rule 101   expression -> OPEN_BRACKETS CLOSED_BRACKETS
Rule 102   assignment_list -> assign_expression COMMA assignment_list
Rule 103   assignment_list -> assign_expression COMMA assign_expression
Rule 104   expression -> STRUCT BEGIN assignment_list END
Rule 105   expression -> STRUCT BEGIN assign_expression END
Rule 106   expression -> STRUCT BEGIN END
Rule 107   expression -> expression LAMBDA_ARROW expression
Rule 108   file -> STRING
Rule 109   expression -> IMPORT file
Rule 110   expression -> MATCH expression WITH cases DOT
Rule 111   cases -> CASE expression COLON expression DOT cases
Rule 112   cases -> CASE expression COLON expression DOT

Terminals, with rules where they appear

AND                  : 14
AND_ASSIGN           : 46
ASSIGN               : 31
BEGIN                : 51 52 53 104 105 106
CASE                 : 111 112
CLOSED_BRACKETS      : 63 64 64 66 96 97 99 100 101
COLON                : 76 77 85 86 111 112
COMMA                : 56 57 58 58 60 60 61 72 76 82 85 89 92 93 102 103
CONS                 : 94
DIVIDE               : 9
DIVIDE_ASSIGN        : 37
DIVIDE_CEIL          : 10
DIVIDE_CEIL_ASSIGN   : 39
DIVIDE_FLOOR         : 11
DIVIDE_FLOOR_ASSIGN  : 38
DOT                  : 56 57 61 62 91 110 111 112
DOTS                 : 79
ELIF                 : 58 60
ELSE                 : 59
END                  : 51 52 53 104 105 106
EQUALS               : 28 89 90
EQUALS_ASSIGN        : 44
EXP                  : 13
EXP_ASSIGN           : 49
FLOAT                : 2
GREATER_EQUALS       : 30
GREATER_EQUALS_ASSIGN : 42
GREATER_THAN         : 25
GREATER_THAN_ASSIGN  : 40
IDENTIFIER           : 4 31 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 62 69 72 73 76 77 79 89 90
IF                   : 56 57 58 60
IMAG                 : 21
IMPORT               : 109
IN                   : 62 91
ITER                 : 63 64 65 66
LAMBDA               : 67
LAMBDA_ARROW         : 67 107
LET                  : 91
LOOP                 : 62
LOOPTHEN             : 62
LPAREN               : 5 68 88 95
MATCH                : 110
MINUS                : 7 19
MINUS_ASSIGN         : 34
MOD                  : 12
MOD_ASSIGN           : 50
NOT                  : 18
NULL                 : 98
NUMBER               : 1
OPEN_BRACKETS        : 63 65 65 66 96 97 99 100 101
OR                   : 15
OR_ASSIGN            : 47
PLUS                 : 6 20 96
PLUS_ASSIGN          : 33
POWER                : 17
POWER_ASSIGN         : 36
RPAREN               : 5 68 88 95
SEMICOLON            : 52 55
SMALLER_EQUALS       : 29
SMALLER_EQUALS_ASSIGN : 43
SMALLER_THAN         : 26
SMALLER_THAN_ASSIGN  : 41
STRING               : 3 108
STRUCT               : 104 105 106
THEN                 : 56 57 58 60 61
TIMES                : 8
TIMES_ASSIGN         : 35
UNEQUALS             : 27
UNEQUALS_ASSIGN      : 45
WHILE                : 61
WITH                 : 110
XOR                  : 16
XOR_ASSIGN           : 48
error                : 

Nonterminals, with rules where they appear

assign_expression    : 32 102 103 103 105
assignment_list      : 102 104
cases                : 110 111
comparison           : 23 24
comparison_op        : 22 23
else_elif_body       : 57 58
empty                : 70 81
expression           : 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 19 20 21 22 22 23 31 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 54 55 56 56 57 57 58 58 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 76 77 82 83 85 85 86 86 88 89 90 91 92 93 93 94 94 96 97 97 100 107 107 110 111 111 112 112 0
file                 : 109
let_assign           : 89 91
param_list           : 92 95 99
parameter            : 67
parameter_expr       : 88
parameter_infty      : 78
parameter_keywords   : 74
parameter_keywords_expr : 84 85
parameter_kw_list    : 75 76
parameter_pos        : 68
parameter_pos_expr   : 80 82
parameter_pos_list   : 71 72
statements           : 51 52 55

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . NUMBER
    (2) expression -> . FLOAT
    (3) expression -> . STRING
    (4) expression -> . IDENTIFIER
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression DIVIDE_CEIL expression
    (11) expression -> . expression DIVIDE_FLOOR expression
    (12) expression -> . expression MOD expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression POWER expression
    (18) expression -> . NOT expression
    (19) expression -> . MINUS expression
    (20) expression -> . PLUS expression
    (21) expression -> . expression IMAG
    (24) expression -> . comparison
    (32) expression -> . assign_expression
    (33) expression -> . IDENTIFIER PLUS_ASSIGN expression
    (34) expression -> . IDENTIFIER MINUS_ASSIGN expression
    (35) expression -> . IDENTIFIER TIMES_ASSIGN expression
    (36) expression -> . IDENTIFIER POWER_ASSIGN expression
    (37) expression -> . IDENTIFIER DIVIDE_ASSIGN expression
    (38) expression -> . IDENTIFIER DIVIDE_FLOOR_ASSIGN expression
    (39) expression -> . IDENTIFIER DIVIDE_CEIL_ASSIGN expression
    (40) expression -> . IDENTIFIER GREATER_THAN_ASSIGN expression
    (41) expression -> . IDENTIFIER SMALLER_THAN_ASSIGN expression
    (42) expression -> . IDENTIFIER GREATER_EQUALS_ASSIGN expression
    (43) expression -> . IDENTIFIER SMALLER_EQUALS_ASSIGN expression
    (44) expression -> . IDENTIFIER EQUALS_ASSIGN expression
    (45) expression -> . IDENTIFIER UNEQUALS_ASSIGN expression
    (46) expression -> . IDENTIFIER AND_ASSIGN expression
    (47) expression -> . IDENTIFIER OR_ASSIGN expression
    (48) expression -> . IDENTIFIER XOR_ASSIGN expression
    (49) expression -> . IDENTIFIER EXP_ASSIGN expression
    (50) expression -> . IDENTIFIER MOD_ASSIGN expression
    (51) expression -> . BEGIN statements END
    (52) expression -> . BEGIN statements SEMICOLON END
    (53) expression -> . BEGIN END
    (56) expression -> . IF expression THEN COMMA expression DOT
    (57) expression -> . IF expression THEN COMMA expression else_elif_body DOT
    (61) expression -> . WHILE expression THEN COMMA expression DOT
    (62) expression -> . LOOP IDENTIFIER IN expression LOOPTHEN expression DOT
    (63) expression -> . OPEN_BRACKETS expression ITER expression CLOSED_BRACKETS
    (64) expression -> . CLOSED_BRACKETS expression ITER expression CLOSED_BRACKETS
    (65) expression -> . OPEN_BRACKETS expression ITER expression OPEN_BRACKETS
    (66) expression -> . CLOSED_BRACKETS expression ITER expression OPEN_BRACKETS
    (67) expression -> . LAMBDA parameter LAMBDA_ARROW expression
    (88) expression -> . expression LPAREN parameter_expr RPAREN
    (91) expression -> . LET let_assign IN expression DOT
    (94) expression -> . expression CONS expression
    (95) expression -> . LPAREN param_list RPAREN
    (96) expression -> . expression OPEN_BRACKETS PLUS CLOSED_BRACKETS
    (97) expression -> . expression OPEN_BRACKETS expression CLOSED_BRACKETS
    (98) expression -> . NULL
    (99) expression -> . OPEN_BRACKETS param_list CLOSED_BRACKETS
    (100) expression -> . OPEN_BRACKETS expression CLOSED_BRACKETS
    (101) expression -> . OPEN_BRACKETS CLOSED_BRACKETS
    (104) expression -> . STRUCT BEGIN assignment_list END
    (105) expression -> . STRUCT BEGIN assign_expression END
    (106) expression -> . STRUCT BEGIN END
    (107) expression -> . expression LAMBDA_ARROW expression
    (109) expression -> . IMPORT file
    (110) expression -> . MATCH expression WITH cases DOT
    (22) comparison -> . expression comparison_op expression
    (23) comparison -> . comparison comparison_op expression
    (31) assign_expression -> . IDENTIFIER ASSIGN expression

    NUMBER          shift and go to state 2
    FLOAT           shift and go to state 3
    STRING          shift and go to state 4
    IDENTIFIER      shift and go to state 5
    LPAREN          shift and go to state 6
    NOT             shift and go to state 9
    MINUS           shift and go to state 8
    PLUS            shift and go to state 7
    BEGIN           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    LOOP            shift and go to state 15
    OPEN_BRACKETS   shift and go to state 16
    CLOSED_BRACKETS shift and go to state 17
    LAMBDA          shift and go to state 18
    LET             shift and go to state 19
    NULL            shift and go to state 20
    STRUCT          shift and go to state 21
    IMPORT          shift and go to state 22
    MATCH           shift and go to state 23

    expression                     shift and go to state 1
    comparison                     shift and go to state 10
    assign_expression              shift and go to state 11

state 1

    (0) S' -> expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . DIVIDE_CEIL expression
    (11) expression -> expression . DIVIDE_FLOOR expression
    (12) expression -> expression . MOD expression
    (13) expression -> expression . EXP expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . XOR expression
    (17) expression -> expression . POWER expression
    (21) expression -> expression . IMAG
    (88) expression -> expression . LPAREN parameter_expr RPAREN
    (94) expression -> expression . CONS expression
    (96) expression -> expression . OPEN_BRACKETS PLUS CLOSED_BRACKETS
    (97) expression -> expression . OPEN_BRACKETS expression CLOSED_BRACKETS
    (107) expression -> expression . LAMBDA_ARROW expression
    (22) comparison -> expression . comparison_op expression
    (25) comparison_op -> . GREATER_THAN
    (26) comparison_op -> . SMALLER_THAN
    (27) comparison_op -> . UNEQUALS
    (28) comparison_op -> . EQUALS
    (29) comparison_op -> . SMALLER_EQUALS
    (30) comparison_op -> . GREATER_EQUALS

    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    DIVIDE_CEIL     shift and go to state 28
    DIVIDE_FLOOR    shift and go to state 29
    MOD             shift and go to state 30
    EXP             shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33
    XOR             shift and go to state 34
    POWER           shift and go to state 35
    IMAG            shift and go to state 36
    LPAREN          shift and go to state 37
    CONS            shift and go to state 38
    OPEN_BRACKETS   shift and go to state 39
    LAMBDA_ARROW    shift and go to state 40
    GREATER_THAN    shift and go to state 42
    SMALLER_THAN    shift and go to state 43
    UNEQUALS        shift and go to state 44
    EQUALS          shift and go to state 45
    SMALLER_EQUALS  shift and go to state 46
    GREATER_EQUALS  shift and go to state 47

    comparison_op                  shift and go to state 41

state 2

    (1) expression -> NUMBER .

    PLUS            reduce using rule 1 (expression -> NUMBER .)
    MINUS           reduce using rule 1 (expression -> NUMBER .)
    TIMES           reduce using rule 1 (expression -> NUMBER .)
    DIVIDE          reduce using rule 1 (expression -> NUMBER .)
    DIVIDE_CEIL     reduce using rule 1 (expression -> NUMBER .)
    DIVIDE_FLOOR    reduce using rule 1 (expression -> NUMBER .)
    MOD             reduce using rule 1 (expression -> NUMBER .)
    EXP             reduce using rule 1 (expression -> NUMBER .)
    AND             reduce using rule 1 (expression -> NUMBER .)
    OR              reduce using rule 1 (expression -> NUMBER .)
    XOR             reduce using rule 1 (expression -> NUMBER .)
    POWER           reduce using rule 1 (expression -> NUMBER .)
    IMAG            reduce using rule 1 (expression -> NUMBER .)
    LPAREN          reduce using rule 1 (expression -> NUMBER .)
    CONS            reduce using rule 1 (expression -> NUMBER .)
    OPEN_BRACKETS   reduce using rule 1 (expression -> NUMBER .)
    LAMBDA_ARROW    reduce using rule 1 (expression -> NUMBER .)
    GREATER_THAN    reduce using rule 1 (expression -> NUMBER .)
    SMALLER_THAN    reduce using rule 1 (expression -> NUMBER .)
    UNEQUALS        reduce using rule 1 (expression -> NUMBER .)
    EQUALS          reduce using rule 1 (expression -> NUMBER .)
    SMALLER_EQUALS  reduce using rule 1 (expression -> NUMBER .)
    GREATER_EQUALS  reduce using rule 1 (expression -> NUMBER .)
    $end            reduce using rule 1 (expression -> NUMBER .)
    RPAREN          reduce using rule 1 (expression -> NUMBER .)
    COMMA           reduce using rule 1 (expression -> NUMBER .)
    END             reduce using rule 1 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 1 (expression -> NUMBER .)
    THEN            reduce using rule 1 (expression -> NUMBER .)
    ITER            reduce using rule 1 (expression -> NUMBER .)
    CLOSED_BRACKETS reduce using rule 1 (expression -> NUMBER .)
    WITH            reduce using rule 1 (expression -> NUMBER .)
    COLON           reduce using rule 1 (expression -> NUMBER .)
    LOOPTHEN        reduce using rule 1 (expression -> NUMBER .)
    DOT             reduce using rule 1 (expression -> NUMBER .)
    IN              reduce using rule 1 (expression -> NUMBER .)
    ELSE            reduce using rule 1 (expression -> NUMBER .)


state 3

    (2) expression -> FLOAT .

    PLUS            reduce using rule 2 (expression -> FLOAT .)
    MINUS           reduce using rule 2 (expression -> FLOAT .)
    TIMES           reduce using rule 2 (expression -> FLOAT .)
    DIVIDE          reduce using rule 2 (expression -> FLOAT .)
    DIVIDE_CEIL     reduce using rule 2 (expression -> FLOAT .)
    DIVIDE_FLOOR    reduce using rule 2 (expression -> FLOAT .)
    MOD             reduce using rule 2 (expression -> FLOAT .)
    EXP             reduce using rule 2 (expression -> FLOAT .)
    AND             reduce using rule 2 (expression -> FLOAT .)
    OR              reduce using rule 2 (expression -> FLOAT .)
    XOR             reduce using rule 2 (expression -> FLOAT .)
    POWER           reduce using rule 2 (expression -> FLOAT .)
    IMAG            reduce using rule 2 (expression -> FLOAT .)
    LPAREN          reduce using rule 2 (expression -> FLOAT .)
    CONS            reduce using rule 2 (expression -> FLOAT .)
    OPEN_BRACKETS   reduce using rule 2 (expression -> FLOAT .)
    LAMBDA_ARROW    reduce using rule 2 (expression -> FLOAT .)
    GREATER_THAN    reduce using rule 2 (expression -> FLOAT .)
    SMALLER_THAN    reduce using rule 2 (expression -> FLOAT .)
    UNEQUALS        reduce using rule 2 (expression -> FLOAT .)
    EQUALS          reduce using rule 2 (expression -> FLOAT .)
    SMALLER_EQUALS  reduce using rule 2 (expression -> FLOAT .)
    GREATER_EQUALS  reduce using rule 2 (expression -> FLOAT .)
    $end            reduce using rule 2 (expression -> FLOAT .)
    RPAREN          reduce using rule 2 (expression -> FLOAT .)
    COMMA           reduce using rule 2 (expression -> FLOAT .)
    END             reduce using rule 2 (expression -> FLOAT .)
    SEMICOLON       reduce using rule 2 (expression -> FLOAT .)
    THEN            reduce using rule 2 (expression -> FLOAT .)
    ITER            reduce using rule 2 (expression -> FLOAT .)
    CLOSED_BRACKETS reduce using rule 2 (expression -> FLOAT .)
    WITH            reduce using rule 2 (expression -> FLOAT .)
    COLON           reduce using rule 2 (expression -> FLOAT .)
    LOOPTHEN        reduce using rule 2 (expression -> FLOAT .)
    DOT             reduce using rule 2 (expression -> FLOAT .)
    IN              reduce using rule 2 (expression -> FLOAT .)
    ELSE            reduce using rule 2 (expression -> FLOAT .)


state 4

    (3) expression -> STRING .

    PLUS            reduce using rule 3 (expression -> STRING .)
    MINUS           reduce using rule 3 (expression -> STRING .)
    TIMES           reduce using rule 3 (expression -> STRING .)
    DIVIDE          reduce using rule 3 (expression -> STRING .)
    DIVIDE_CEIL     reduce using rule 3 (expression -> STRING .)
    DIVIDE_FLOOR    reduce using rule 3 (expression -> STRING .)
    MOD             reduce using rule 3 (expression -> STRING .)
    EXP             reduce using rule 3 (expression -> STRING .)
    AND             reduce using rule 3 (expression -> STRING .)
    OR              reduce using rule 3 (expression -> STRING .)
    XOR             reduce using rule 3 (expression -> STRING .)
    POWER           reduce using rule 3 (expression -> STRING .)
    IMAG            reduce using rule 3 (expression -> STRING .)
    LPAREN          reduce using rule 3 (expression -> STRING .)
    CONS            reduce using rule 3 (expression -> STRING .)
    OPEN_BRACKETS   reduce using rule 3 (expression -> STRING .)
    LAMBDA_ARROW    reduce using rule 3 (expression -> STRING .)
    GREATER_THAN    reduce using rule 3 (expression -> STRING .)
    SMALLER_THAN    reduce using rule 3 (expression -> STRING .)
    UNEQUALS        reduce using rule 3 (expression -> STRING .)
    EQUALS          reduce using rule 3 (expression -> STRING .)
    SMALLER_EQUALS  reduce using rule 3 (expression -> STRING .)
    GREATER_EQUALS  reduce using rule 3 (expression -> STRING .)
    $end            reduce using rule 3 (expression -> STRING .)
    RPAREN          reduce using rule 3 (expression -> STRING .)
    COMMA           reduce using rule 3 (expression -> STRING .)
    END             reduce using rule 3 (expression -> STRING .)
    SEMICOLON       reduce using rule 3 (expression -> STRING .)
    THEN            reduce using rule 3 (expression -> STRING .)
    ITER            reduce using rule 3 (expression -> STRING .)
    CLOSED_BRACKETS reduce using rule 3 (expression -> STRING .)
    WITH            reduce using rule 3 (expression -> STRING .)
    COLON           reduce using rule 3 (expression -> STRING .)
    LOOPTHEN        reduce using rule 3 (expression -> STRING .)
    DOT             reduce using rule 3 (expression -> STRING .)
    IN              reduce using rule 3 (expression -> STRING .)
    ELSE            reduce using rule 3 (expression -> STRING .)


state 5

    (4) expression -> IDENTIFIER .
    (33) expression -> IDENTIFIER . PLUS_ASSIGN expression
    (34) expression -> IDENTIFIER . MINUS_ASSIGN expression
    (35) expression -> IDENTIFIER . TIMES_ASSIGN expression
    (36) expression -> IDENTIFIER . POWER_ASSIGN expression
    (37) expression -> IDENTIFIER . DIVIDE_ASSIGN expression
    (38) expression -> IDENTIFIER . DIVIDE_FLOOR_ASSIGN expression
    (39) expression -> IDENTIFIER . DIVIDE_CEIL_ASSIGN expression
    (40) expression -> IDENTIFIER . GREATER_THAN_ASSIGN expression
    (41) expression -> IDENTIFIER . SMALLER_THAN_ASSIGN expression
    (42) expression -> IDENTIFIER . GREATER_EQUALS_ASSIGN expression
    (43) expression -> IDENTIFIER . SMALLER_EQUALS_ASSIGN expression
    (44) expression -> IDENTIFIER . EQUALS_ASSIGN expression
    (45) expression -> IDENTIFIER . UNEQUALS_ASSIGN expression
    (46) expression -> IDENTIFIER . AND_ASSIGN expression
    (47) expression -> IDENTIFIER . OR_ASSIGN expression
    (48) expression -> IDENTIFIER . XOR_ASSIGN expression
    (49) expression -> IDENTIFIER . EXP_ASSIGN expression
    (50) expression -> IDENTIFIER . MOD_ASSIGN expression
    (31) assign_expression -> IDENTIFIER . ASSIGN expression

    PLUS            reduce using rule 4 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 4 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 4 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 4 (expression -> IDENTIFIER .)
    DIVIDE_CEIL     reduce using rule 4 (expression -> IDENTIFIER .)
    DIVIDE_FLOOR    reduce using rule 4 (expression -> IDENTIFIER .)
    MOD             reduce using rule 4 (expression -> IDENTIFIER .)
    EXP             reduce using rule 4 (expression -> IDENTIFIER .)
    AND             reduce using rule 4 (expression -> IDENTIFIER .)
    OR              reduce using rule 4 (expression -> IDENTIFIER .)
    XOR             reduce using rule 4 (expression -> IDENTIFIER .)
    POWER           reduce using rule 4 (expression -> IDENTIFIER .)
    IMAG            reduce using rule 4 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 4 (expression -> IDENTIFIER .)
    CONS            reduce using rule 4 (expression -> IDENTIFIER .)
    OPEN_BRACKETS   reduce using rule 4 (expression -> IDENTIFIER .)
    LAMBDA_ARROW    reduce using rule 4 (expression -> IDENTIFIER .)
    GREATER_THAN    reduce using rule 4 (expression -> IDENTIFIER .)
    SMALLER_THAN    reduce using rule 4 (expression -> IDENTIFIER .)
    UNEQUALS        reduce using rule 4 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 4 (expression -> IDENTIFIER .)
    SMALLER_EQUALS  reduce using rule 4 (expression -> IDENTIFIER .)
    GREATER_EQUALS  reduce using rule 4 (expression -> IDENTIFIER .)
    $end            reduce using rule 4 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 4 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 4 (expression -> IDENTIFIER .)
    END             reduce using rule 4 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 4 (expression -> IDENTIFIER .)
    THEN            reduce using rule 4 (expression -> IDENTIFIER .)
    ITER            reduce using rule 4 (expression -> IDENTIFIER .)
    CLOSED_BRACKETS reduce using rule 4 (expression -> IDENTIFIER .)
    WITH            reduce using rule 4 (expression -> IDENTIFIER .)
    COLON           reduce using rule 4 (expression -> IDENTIFIER .)
    LOOPTHEN        reduce using rule 4 (expression -> IDENTIFIER .)
    DOT             reduce using rule 4 (expression -> IDENTIFIER .)
    IN              reduce using rule 4 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 4 (expression -> IDENTIFIER .)
    PLUS_ASSIGN     shift and go to state 48
    MINUS_ASSIGN    shift and go to state 49
    TIMES_ASSIGN    shift and go to state 50
    POWER_ASSIGN    shift and go to state 51
    DIVIDE_ASSIGN   shift and go to state 52
    DIVIDE_FLOOR_ASSIGN shift and go to state 53
    DIVIDE_CEIL_ASSIGN shift and go to state 54
    GREATER_THAN_ASSIGN shift and go to state 55
    SMALLER_THAN_ASSIGN shift and go to state 56
    GREATER_EQUALS_ASSIGN shift and go to state 57
    SMALLER_EQUALS_ASSIGN shift and go to state 58
    EQUALS_ASSIGN   shift and go to state 59
    UNEQUALS_ASSIGN shift and go to state 60
    AND_ASSIGN      shift and go to state 61
    OR_ASSIGN       shift and go to state 62
    XOR_ASSIGN      shift and go to state 63
    EXP_ASSIGN      shift and go to state 64
    MOD_ASSIGN      shift and go to state 65
    ASSIGN          shift and go to state 66


state 6
